snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3.pom.sha512
a08846050e6f3e43072d63736a987de6271fe3e5ab3577f384c9eb115a04aebce284cf5972551bd1188f92855d5ea359cddc7ff97947a1beb95dcf8cfec4e283